--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 <body>
     <header>
         <h1>Long Nguyen | ITIS 3135 | Home<h1>
-        <nav>
-            <!--TODO-->
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-        </nav>
+        <h2>I am Long Nguyen and this is my ITIS3135 First Course Page</h2>
     </header>
     <main>
 
