--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
     <header>
-        <h1>Long Nguyen | ITIS 3135 | Home<h1>
-        <h2>I am Long Nguyen and this is my ITIS3135 First Course Page</h2>
-        <a href="itis3135/">Click to go to ITIS 3135 Site</a>
+        <h1>I am Long Nguyen and this is my ITIS3135 First Course Page</h1>
+        <h2><a href="/lnguye65">Click to go to ITIS 3135 Home Page</a></h2>
     </header>
     <main>
 
