--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
     <header>
         <h1>Long Nguyen | ITIS 3135 | Home<h1>
-        <h2>I am Long Nguyen and this is my ITIS3135 First Course Page</h2>
-        <a href="itis3135/">Click to go to ITIS 3135 Site</a>
+        <h2><a href="itis3135/">Click to go to ITIS 3135 Course Page</a></h2>
     </header>
     <main>
 
