fix small error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Long Nguyen | ITIS 3135 | Home<h1>
+        <h1>Long Nguyen | ITIS 3135 | Home</h1>
         <h2><a href="itis3135/">Click to go to ITIS 3135 Course Page</a></h2>
     </header>
     <main>
