--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Long Nguyen | ITIS 3135 | Home</title>
+    <title>Home Page</title>
+    <link rel="stylesheet" href="styles/style.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1>I am Long Nguyen and this is my ITIS3135 First Course Page</h1>
-        <h2><a href="/lnguye65">Click to go to ITIS 3135 Home Page</a></h2>
+        <h1>Course Page</h1>
+        <h2>Long Nguyen || Anh Long VN</h2>
     </header>
     <main>
-
+        <nav>
+            <a href="/lnguye65">Home</a>
+            <a href="introduction.html">Introduction</a>
+            <a href="contract.html">Contract</a>
+        </nav>
     </main>
-    <footer>
-
+    <footer class="container-fluid bg-success text-center p-2 mt-5">
+        <p>Long Nguyen &copy; 2025</p>
     </footer>
 </body>
 </html>
