--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Long Nguyen | ITIS 3135 | Home</title>
-    <link rel="stylesheet" href="itis3135/styles/style.css">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="itis3135/styles/styles.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>Home Page</h1>
-        <h2>Long Nguyen || Anh Long VN</h2>
+        <h2>Long Nguyen || Anh Long</h2>
     </header>
     <main>
-        <nav>
-            <a href="itis3135">Course</a>
-            <a href="itis3135/introduction.html">Introduction</a>
-            <a href="itis3135/contract.html">Contract</a>
-        </nav>
+        <div>
+            <ul>
+                <li><a href="itis3135">Course</a></li>
+                <li><a href="itis3135/introduction.html">Introduction</a></li>
+                <li><a href="itis3135/contract.html">Contract</a></li>
+                <li><a href="itis3135/about.html">About</a></li>
+            </ul>
+        </div>
     </main>
     <footer class="container-fluid bg-success text-center p-2 mt-5">
-        <p>Long Nguyen &copy; 2025</p>
+        <p>Page designed by <a href="itis3135/longvnproduction.com.html">LongVN Production</a> &copy; 2025</p>
     </footer>
 </body>
 </html>
