--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Long Nguyen | ITIS 3135 | Introduction</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>Introduction</title>
+    <link rel="stylesheet" href="styles/styles.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-
+        <h1>Introduction</h1>
+        <h2>Long Nguyen || Anh Long</h2>
     </header>
     <main>
-        <h1>Introduction</h1>
-        <h2>Long Nguyen || Anh Long VN</h2>
-        <nav>
-            <a href="/lnguye65">Home</a>
-            <a href="/lnguye65/itis3135">Course</a>
-        </nav>
+        <div>
+            <ul>
+                <li><a href="/lnguye65">Home</a></li>
+                <li><a href="/lnguye65/itis3135">Course</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </div>
         <figure>
             <img src="images/long_hanoi.png" alt="Long_Hanoi">
             <figcaption>Me in Hanoi, Vietnam, 2023</figcaption>
@@ -29,8 +31,8 @@
             </section>
         </ul>
     </main>
-    <footer class="container-fluid bg-success text-center p-2 mt-5">
-        <p>Long Nguyen &copy; 2025</p>
+    <footer>
+        <p>Page designed by <a href="longvnproduction.com.html">LongVN Production</a> &copy; 2025</p>
     </footer>
 </body>
 </html>
