--- a/itis3135/about/index.html
+++ b/itis3135/about/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Lively Nightingale Creations</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/lnguye65/itis3135/styles/styles.css">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
+        <div data-include="/lnguye65/itis3135/components/header.html"></div>
         <h1>Lively Nightingale Creations</h1>
-        <div>
-            <ul>
-                <li><a href="/lnguye65">Home</a></li>
-            </ul>
-        </div>
         <p class="tagline"><em>"Innovative tech accessories with a melodic touch!"</em></p>
     </header>
     
@@ -24,7 +21,8 @@
     </main>
     
     <footer>
-        <p>Page designed by <a href="/lnguye65/itis3135/longvnproduction.com.html">LongVN Production</a> &copy; 2025</p>
+        <div data-include="/lnguye65/itis3135/components/footer.html"></div>
     </footer>
+    <script src="/lnguye65/itis3135/scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
