--- a/itis3135/longvnproduction/index.html
+++ b/itis3135/longvnproduction/index.html
@@ -59,10 +59,11 @@
             margin-top: 15px;
         }
     </style>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <img src="images/long_firm_logo.jpg" alt="LongVN Production Logo">
+        <img src="/lnguye65/itis3135/images/long_firm_logo.jpg" alt="LongVN Production Logo">
         <h1>LongVN Production</h1>
     </header>
 
