--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="itis3135/styles/styles.css">
+    <link rel="stylesheet" href="/lnguye65/itis3135/styles/styles.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -16,14 +16,12 @@
         <div>
             <ul>
                 <li><a href="itis3135">Course</a></li>
-                <li><a href="itis3135/introduction.html">Introduction</a></li>
-                <li><a href="itis3135/contract.html">Contract</a></li>
-                <li><a href="itis3135/about.html">About</a></li>
             </ul>
         </div>
     </main>
-    <footer class="container-fluid bg-success text-center p-2 mt-5">
-        <p>Page designed by <a href="itis3135/longvnproduction.com.html">LongVN Production</a> &copy; 2025</p>
+    <footer>
+        <div data-include="/lnguye65/itis3135/components/footer.html"></div>
     </footer>
+    <script src="/lnguye65/itis3135/scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
