--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,26 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Page</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/lnguye65/itis3135/styles/styles.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <h1>Course Page</h1>
-        <h2>Long Nguyen || Anh Long</h2>
+        <div data-include="/lnguye65/itis3135/components/header.html"></div>
     </header>
     <main>
-        <div>
-            <ul>
-                <li><a href="/lnguye65">Home</a></li>
-                <li><a href="introduction.html">Introduction</a></li>
-                <li><a href="contract.html">Contract</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </div>
     </main>
     <footer>
-        <p>Page designed by <a href="longvnproduction.com.html">LongVN Production</a> &copy; 2025</p>
+        <div data-include="/lnguye65/itis3135/components/footer.html"></div>
     </footer>
+    <script src="/lnguye65/itis3135/scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
