--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="/lnguye65/itis3135/styles/styles.css">
+    <link rel="stylesheet" href="/itis3135/styles/styles.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -20,8 +20,8 @@
         </div>
     </main>
     <footer>
-        <div data-include="/lnguye65/itis3135/components/footer.html"></div>
+        <div data-include="/itis3135/components/footer.html"></div>
     </footer>
-    <script src="/lnguye65/itis3135/scripts/HTMLInclude.min.js"></script>
+    <script src="/itis3135/scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
