--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <div>
             <ul>
-                <li><a href="itis3135">Course</a></li>
+                <li><a href="/itis3135/">Course</a></li>
             </ul>
         </div>
     </main>
