--- a/itis3135/contract/index.html
+++ b/itis3135/contract/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contract</title>
-    <link rel="stylesheet" href="/lnguye65/itis3135/styles/styles.css">
+    <link rel="stylesheet" href="/itis3135/styles/styles.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <div data-include="/lnguye65/itis3135/components/header.html"></div>
+        <div data-include="/itis3135/components/header.html"></div>
     </header>
     <main>
         <h3>
@@ -17,8 +17,8 @@
         </h3>
     </main>
     <footer>
-        <div data-include="/lnguye65/itis3135/components/footer.html"></div>
+        <div data-include="/itis3135/components/footer.html"></div>
     </footer>
-    <script src="/lnguye65/itis3135/scripts/HTMLInclude.min.js"></script>
+    <script src="/itis3135/scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
