--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -104,7 +104,7 @@
         </section>
     </main>
     <footer>
-        <p>Designed by <a href="https://webpages.charlotte.edu/lnguye65/itis3135">Long Nguyen Firm</a> &copy; 2025</p>
+        <p>Designed by <a href="https://lnguye782.github.io/itis3135/">Long Nguyen Firm</a> &copy; 2025</p>
         <div class="validation-links">
             <a href="https://validator.w3.org/check?uri=referer">
                 <img src="https://raw.githubusercontent.com/bradleytaunt/html5-valid-badge/refs/heads/master/html5-validator-badge.png" 
@@ -117,13 +117,13 @@
                      alt="Valid CSS!">
             </a>
     
-            <a href="https://wave.webaim.org/report#/https://webpages.charlotte.edu/lnguye65/itis3135/hobby/">
+            <a href="https://wave.webaim.org/report#/https://lnguye782.github.io/itis3135/">
                 <img style="border:0;width:88px;height:31px" 
                      src="https://www.w3.org/WAI/WCAG22/wcag2.2AAA.png" 
                      alt="Accessibility Validation">
             </a>
         </div>
     </footer>
-    <script src="/lnguye65/itis3135/scripts/HTMLInclude.min.js"></script>
+    <script src="/itis3135/scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
