--- a/itis3135/introduction/index.html
+++ b/itis3135/introduction/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introduction</title>
-    <link rel="stylesheet" href="/lnguye65/itis3135/styles/styles.css">
+    <link rel="stylesheet" href="/itis3135/styles/styles.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <div data-include="/lnguye65/itis3135/components/header.html"></div>
+        <div data-include="/itis3135/components/header.html"></div>
     </header>
     <main>
         <figure>
-            <img src="/lnguye65/itis3135/images/long_hanoi.png" alt="Long_Hanoi">
+            <img src="/itis3135/images/long_hanoi.png" alt="Long_Hanoi">
             <figcaption>Me in Hanoi, Vietnam, 2023</figcaption>
         </figure>
         <section>
@@ -32,8 +32,8 @@
         </section>
     </main>
     <footer>
-        <div data-include="/lnguye65/itis3135/components/footer.html"></div>
+        <div data-include="/itis3135/components/footer.html"></div>
     </footer>
-    <script src="/lnguye65/itis3135/scripts/HTMLInclude.min.js"></script>
+    <script src="/itis3135/scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
